@@ -8207,7 +8207,7 @@ readonly attribute <a>SVGAnimatedNumberList</a> <a href=
 "#SVGFECustomParamElement__values">values</a>;
 readonly attribute <a>SVGAnimatedString</a> <a href=
 "#SVGFECustomParamElement__texture">texture</a>;
-readonly attribute <a>SVGAnimatedColor</a> <a href=
+readonly attribute <a>SVGAnimatedString</a> <a href=
 "#SVGFECustomParamElement__color">color</a>;
 readonly attribute <a>SVGAnimatedTransformList</a> <a href= 
 "#SVGFECustomParamElement__transform">transform</a>;
@@ -8343,7 +8343,7 @@ readonly attribute <a>SVGAnimatedTransformList</a> <a href=
       </dd>
       <dt id="SVGFECustomParamElement__color">
         <b>color</b> <span class="idl-type-parenthetical">(readonly
-        <a>SVGAnimatedColor</a>)</span>
+        <a>SVGAnimatedString</a>)</span>
       </dt>
       <dd>
         <div>
