@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-08-26 name=dcterms.date>
+  <meta content=2013-08-27 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 26 August 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 27 August 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130826/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130827/-->
 
     <dt>Latest version:
 
@@ -12093,6 +12093,10 @@ uniform vec2 dispSize;
    preserved. Filter- and filter effect regions are sized according to the
    input image size.
 
+  <p class=issue> We probably want to have a different edgeMode for the
+   blur() function to avoid clipping on the edges. The dimension of the image
+   shall not be affected.
+
   <p class=note> Note: Since the dimension and origin of the original image
    must be preserved, some filter effects like <var>drop-shadow</var> on a
    fully opaque image may not have any affect.
@@ -13898,8 +13902,8 @@ readonly attribute <a
 readonly attribute <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a> <a
    href="#SVGFECustomParamElement__texture">texture</a>;
-readonly attribute <span
-   class=xxx>SVGAnimatedColor</span> <a
+readonly attribute <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a> <a
    href="#SVGFECustomParamElement__color">color</a>;
 readonly attribute <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#InterfaceSVGAnimatedTransformList">SVGAnimatedTransformList</a> <a
@@ -14013,8 +14017,8 @@ readonly attribute <a
        class=element-name>&lt;feCustomParam></code></a> element.</div>
 
      <dt id="SVGFECustomParamElement__color"> <b>color</b> <span
-      class=idl-type-parenthetical>(readonly <span
-      class=xxx>SVGAnimatedColor</span>)</span>
+      class=idl-type-parenthetical>(readonly <a
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedString">SVGAnimatedString</a>)</span>
 
      <dd>
       <div> Corresponds to attribute <a class=attr-name
