@@ -2,6 +2,12 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-08-26  Dirk Schulze  <dschulze@adobe.com>
+- Replace SVGAnimatedColor with SVGAnimatedString.
+
+2013-08-26  Dirk Schulze  <dschulze@adobe.com>
+- Added clarification for 'color-interpolation-filters' property.
+
+2013-08-26  Dirk Schulze  <dschulze@adobe.com>
 - Added more issues to the spec.
 
 2013-08-25  Dirk Schulze  <dschulze@adobe.com>
